# adventcode2022

./: Cargo.toml  input.txt
src/: main.rs
src/day1/: main.rs
src/day2/: main.rs
