[package]
name = "adventcode2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]

edition = "2021"
name = "day1"
path = "src/bin/day1.rs"


[[bin]]

edition = "2021"
name = "day2"
path = "src/bin/day2.rs"